@@ -16,15 +16,6 @@ package|;
 end_package
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -38,20 +29,11 @@ import|;
 end_import
 begin_import
 import|import
-name|org
+name|java
 operator|.
-name|slf4j
+name|util
 operator|.
-name|Logger
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|slf4j
-operator|.
-name|LoggerFactory
+name|Map
 import|;
 end_import
 begin_comment
@@ -66,22 +48,6 @@ name|BaseCharFilterFactory
 implements|implements
 name|CharFilterFactory
 block|{
-DECL|field|log
-specifier|public
-specifier|static
-specifier|final
-name|Logger
-name|log
-init|=
-name|LoggerFactory
-operator|.
-name|getLogger
-argument_list|(
-name|BaseCharFilterFactory
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
 DECL|field|luceneMatchVersion
 specifier|protected
 name|Version
