@@ -51,6 +51,24 @@ operator|.
 name|ChineseFilter
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
 begin_comment
 comment|/**  * Factory for {@link ChineseFilter}  * @deprecated Use {@link StopFilterFactory} instead.  */
 end_comment
@@ -64,6 +82,22 @@ name|ChineseFilterFactory
 extends|extends
 name|BaseTokenFilterFactory
 block|{
+DECL|field|log
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|log
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|ChineseFilterFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|init
@@ -87,9 +121,17 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
-name|warnDeprecated
+name|log
+operator|.
+name|warn
 argument_list|(
-literal|"Use StopFilterFactory instead."
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" is deprecated. Use StopFilterFactory instead."
 argument_list|)
 expr_stmt|;
 block|}
