@@ -47,6 +47,24 @@ operator|.
 name|ChineseTokenizer
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|Logger
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|LoggerFactory
+import|;
+end_import
 begin_comment
 comment|/**   * Factory for {@link ChineseTokenizer}  * @deprecated Use {@link StandardTokenizerFactory} instead.  */
 end_comment
@@ -60,6 +78,22 @@ name|ChineseTokenizerFactory
 extends|extends
 name|BaseTokenizerFactory
 block|{
+DECL|field|log
+specifier|private
+specifier|static
+specifier|final
+name|Logger
+name|log
+init|=
+name|LoggerFactory
+operator|.
+name|getLogger
+argument_list|(
+name|ChineseTokenizerFactory
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 annotation|@
 name|Override
 DECL|method|init
@@ -83,9 +117,17 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
-name|warnDeprecated
+name|log
+operator|.
+name|warn
 argument_list|(
-literal|"Use StandardTokenizerFactory instead."
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" is deprecated. Use StandardTokenizeFactory instead."
 argument_list|)
 expr_stmt|;
 block|}
